# nes-2015

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conan-resolve-deps.sh  conan-resolve-win.cmd  conanfile.txt
bii/: policies.bii
blocks/halfvector/boost-di/: CMakeLists.txt  biicode.conf  di.hpp
blocks/halfvector/easylogging/: CMakeLists.txt  biicode.conf  main.cpp
blocks/halfvector/nes/: Audio.cpp  Audio.h  Backtrace.cpp  CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.h  CartridgeFormat.h  CartridgeLoader.cpp  CartridgeLoader.h  DI.h  Exceptions.h  GUI.cpp  GUI.h  Instructions.cpp  Instructions.h  Joypad.cpp  Joypad.h  Logging.cpp  Logging.h  Memory.cpp  Memory.h  MemoryIO.cpp  MemoryIO.h  MemoryLookup.cpp  MemoryLookup.h  MemoryOperation.h  MemoryStack.cpp  MemoryStack.h  OpcodeGenerator.cpp  OpcodeGenerator.h  PPU.cpp  PPU.h  PerfTest.cpp  PerfTest.h  Platform.h  RegisterOperation.h  Registers.h  biicode.conf  cpu.h  (+4 more)
blocks/halfvector/nes/performance/: FunctorPerf.cpp  Lambda.cpp  Loops.cpp  dbg.sh
blocks/halfvector/nes/test/: InstructionTest.cpp
src/: Audio.cpp  Audio.h  Backtrace.cpp  Backtrace.h  CPU.cpp  CPU.h  Cartridge.h  CartridgeLoader.cpp  CartridgeLoader.h  Exceptions.h  GUI.cpp  GUI.h  Instructions.cpp  Instructions.h  Joypad.cpp  Logging.cpp  Logging.h  Memory.cpp  Memory.h  MemoryIO.cpp  MemoryIO.h  MemoryLookup.h  MemoryMapper.cpp  MemoryMapper.h  MemoryOperation.h  MemoryStack.cpp  PPU.cpp  PPU.h  Platform.h  RegisterOperation.cpp  RegisterOperation.h  Registers.h  main.cpp
src/performance/: Lambda.cpp  Loops.cpp
src/roms/sound-test/: Makefile  defs.s  header.s  main.s  sound-test.nes
src/shaders/: blur.frag  blur.vert  compose.frag  create-gbuffer.frag  create-gbuffer.vert  passthru.frag  passthru.vert
src/test/: MemoryTest.cpp
